Use install and remove the useless env variable

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ php:
   - 7.2
 
 before_script:
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
+  - travis_retry composer install --no-interaction --prefer-source
 
 script:
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
-after_script:
-  - php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
+after_success:
+  - travis_retry vendor/bin/coveralls -v
