--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": "^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5"
+        "phpunit/phpunit": "^6.5",
+        "php-coveralls/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4": {
